<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group_mHBS_Tracker_APp">
        <item
            android:id="@+id/nav_mHBS_tracker_app"
            android:icon="@drawable/ic_apps"
            android:title="@string/mHBS_Tracker" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star"
            android:title="@string/favorites" />

        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_download"
            android:title="@string/downloads" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_info"
            android:title="@string/information" />
    </group>

</menu>
